--- a/styles.css
+++ b/styles.css
@@ -5,34 +5,13 @@
     padding: 15px;
     padding-bottom: 30px;
   }
-  
-  .search {
-    width: 100%;
-    height: 100%;
-    position: relative;
-    display: flex;
-  }
-  
-  .searchTerm {
-    width: 100%;
-    height: 100%;
-    border: 3px solid #000000;
-    padding: 5px;
-    height: 30px;
-    border-radius: 5px;
-    outline: none;
-    color: #000000;
-  }
-  
-  .searchTerm:focus{
-    color: #000000;
-    /* font-weight: bold; */
-  }
+
     
   .wrap{
     width: 50%;
     position: relative;
-    left: 25%;
+    left: 50%;
+    transform: translateX(-50%);
   }
 
   h1{
