--- a/styles.css
+++ b/styles.css
@@ -17,3 +17,13 @@ h1{
   text-align: center;
   font-family: 'Helvatica';
 }
+
+.search {
+  width: 100%;
+  /* height: 100%; */
+  position: relative;
+  display: flex;
+}
+#search {
+  width: 500px;
+}
